Prevented annoying side scroll on mobile

--- a/dev/scss/global/_base.scss
+++ b/dev/scss/global/_base.scss
@@ -5,6 +5,7 @@
 body {
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 figure {
